@@ -1,5 +1,7 @@
 20/08/2014:
 	- Cleanup to IIIF code and some cosmetic improvements to generated JSON.
+	- Added string escape function to URL class and moved all environment variable access to
+	  Main.cc.
 
 
 19/08/2014:
